exports[`test advanced props 1`] = `
<div>
  foo
</div>
`;

exports[`test async store integration 1`] = `
<div>
  <div
    className="redux">
    foo
  </div>
  <div
    className="custom">
    custom
  </div>
</div>
`;

exports[`test simple props 1`] = `
<div>
  foo
</div>
`;

exports[`test simple store integration 1`] = `
<div>
  <div
    className="redux">
    foo
  </div>
  <div
    className="custom">
    custom
  </div>
</div>
`;
